improve: colorize, footer menu curve, storage management, firmware corrupted, demo tracker dongle, route fix 404, dtc not read first time, change loading with road and car, shift tab, select search, cache
issue:

--- a/projects/core/src/assets/styles/themes/default-dark.scss
+++ b/projects/core/src/assets/styles/themes/default-dark.scss
@@ -6,14 +6,14 @@
   --color-black: rgb(255, 255, 255);
   --color-black-rgb: 255, 255, 255;
 
-  --color-white: rgb(30, 30, 30);
-  --color-white-rgb: 51, 51, 51;
+  --color-white: rgb(29, 29, 31);
+  --color-white-rgb: 29, 29, 31;
 
 
-  --color-gray--0: #212226;
-  --color-gray--1: #25272d;
-  --color-gray--2: #2e3038;
-  --color-gray--3: #34363f;
+  --color-gray--0: #202023;
+  --color-gray--1: #212226;
+  --color-gray--2: #25272d;
+  --color-gray--3: #2b2d34;
   --color-gray--4: #363a48;
   --color-gray--5: #394149;
   --color-gray--6: #474c59;
